--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,13 +13,6 @@
   --font-poppins: var(--font-poppins);
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
-
 body {
   background: var(--background);
   color: var(--foreground);
@@ -27,4 +20,13 @@ body {
 
 button {
   @apply cursor-pointer
+}
+
+.prose a {
+  color: #2563eb;
+  text-decoration: underline;
+}
+
+.prose a:hover {
+  color: #1e40af;
 }
